--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@babel/preset-env": "^7.14.4",
     "@vue/compiler-sfc": "^3.3.8",
     "@vue/eslint-config-standard": "^6.0.0",
-    "@vue/test-utils": "1.2.0",
+    "@vue/test-utils": "^2.4.2",
+    "@vue/vue3-jest": "^29.2.6",
+    "babel-jest": "^29.7.0",
     "core-js": "^3.13.1",
     "coveralls": "^3.1.0",
     "eslint": "^7.27.0",
@@ -36,7 +38,8 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.10.0",
     "flush-promises": "^1.0.2",
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-serializer-vue": "^2.0.2",
     "jest-watch-typeahead": "^0.6.4",
@@ -46,8 +49,7 @@
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-string": "^3.0.0",
     "vite": "^4.3.9",
-    "vue": "^3.3.8",
-    "vue-jest": "^4.0.1"
+    "vue": "^3.3.8"
   },
   "homepage": "https://github.com/technowledgy/vue-h5p#readme",
   "keywords": [
